On clinics page, add button to open session attendance.

--- a/client/src/assets/scss/_app.scss
+++ b/client/src/assets/scss/_app.scss
@@ -15,6 +15,11 @@ a {
   cursor: pointer;
 }
 
+.ui.table.session-list {
+  color: $color-text;
+  font-size: 1.75rem;
+}
+
 .consent-form-list {
   color: $color-text;
 }
