Filter by name on Participants page

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -1261,3 +1261,9 @@ input::placeholder {
     margin-bottom: 30px;
   }
 }
+
+.page-participants {
+  .ui.action.input {
+    padding: 3.5rem 3.5rem 1rem;
+  }
+}
