Implement filtering on Activity page

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -1267,3 +1267,9 @@ input::placeholder {
     padding: 3.5rem 3.5rem 1rem;
   }
 }
+
+.page-activity {
+  .ui.action.input {
+    padding: 0.5rem 1rem 3rem;
+  }
+}
