--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -145,3 +145,13 @@ div.page-people {
         }
     }
 }
+
+div.page-person {
+    margin: 0 auto;
+    padding: 0 35px 35px 35px;
+    height: 100%;
+    width: 100%;
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+}
