Show the two participants on the relationship page.

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -146,6 +146,16 @@ div.page-people {
     }
 }
 
+div.page-relationship {
+    margin: 0 auto;
+    padding: 0 35px 35px 35px;
+    height: 100%;
+    width: 100%;
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
 div.page-person {
     margin: 0 auto;
     padding: 0 35px 35px 35px;
