Fix overall layout and scrolling of "Create Person" page.

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -114,6 +114,12 @@ div.page-pincode {
     }
 }
 
+div.page-person-create {
+    margin: 0 auto;
+    padding: 0 35px 35px 35px;
+    width: 100%;
+}
+
 div.page-people {
     margin: 0 auto;
     padding: 0 35px 35px 35px;
