Make birth date field look nicer.

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -765,7 +765,7 @@ h3.ui.header {
         line-height: 0.5;
         text-align: left;
         height: 50px;
-        width: 406px;
+        width: 100%;
         color: $color-text;
 
         &.error {
