--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -53,6 +53,11 @@ div.language-switcher {
         cursor: pointer;
     }
 
+    .sync-icon {
+        color: white;
+        cursor: pointer;
+    }
+
     .links-translate {
         margin: 0;
         padding: 6px 25px;
