View and adjust styling for date selector

--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -1482,3 +1482,13 @@ input::placeholder {
     padding-left: 1rem;
   }
 }
+
+// Date Selector
+
+.date-selector {
+   font-size: 0.7em;
+
+   > div {
+     height: 19em;
+   }
+ }
