--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -1,6 +1,8 @@
 // These first two are as provided by the designer
 @import "variables";
 
+@import "date-selector";
+
 @import "custom";
 
 // Locally-hosted google fonts
