--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -189,3 +189,24 @@ div.page-person {
         margin-top: 50px;
     }
 }
+
+//Device Status Page
+.device-status {
+  button {
+    margin-bottom: 20px;
+  }
+
+  .general-sync {
+    margin-bottom: 40px;
+  }
+
+  .health-centers .health-center {
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+    border-bottom: 1px solid;
+
+    .health-center-info button {
+      margin-top: 20px;
+    }
+  }
+}
