--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -210,3 +210,12 @@ div.page-person {
     }
   }
 }
+
+// Prenatal Encounter Page
+div.page-prenatal-encounter {
+    padding: 0 35px 35px 35px;
+    height: 100%;
+    overflow-y: hidden;
+    display: flex;
+    flex-direction: column;
+}
