--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -5,9 +5,10 @@ $color-secondary:  #0273B2;
 $color-text:       #808080;
 $color-background: #ccc;
 $color-dark-background: #808080;
-$color-dark-blue: #00374f;
+$color-dark-blue:  #00374f;
 $color-gray:       #b1b1b1;
 $color-red:        #ff0000;
+$color-light-gray: #e6e6e6;
 
 $font:             Nunito, Arial, sans-serif;
 $font-alt:         Heebo, Arial, sans-serif;
