--- a/client/src/assets/scss/_custom.scss
+++ b/client/src/assets/scss/_custom.scss
@@ -383,27 +383,27 @@ h3.ui.header {
 }
 
 .icon-task-danger-signs {
-  background-image: url(#{$img-path}icon-planning-active.svg);
+  background-image: url(#{$img-path}icon-task-danger-signs.svg);
   background-size: 88px 80px;
 }
 
 .icon-task-examination {
-  background-image: url(#{$img-path}icon-planning-active.svg);
+  background-image: url(#{$img-path}icon-task-examination.svg);
   background-size: 88px 80px;
 }
 
 .icon-task-history {
-  background-image: url(#{$img-path}icon-planning-active.svg);
+  background-image: url(#{$img-path}icon-task-history.svg);
   background-size: 88px 80px;
 }
 
 .icon-task-patient-provisions {
-  background-image: url(#{$img-path}icon-planning-active.svg);
+  background-image: url(#{$img-path}icon-task-patient-provisions.svg);
   background-size: 88px 80px;
 }
 
 .icon-task-pregnancy-dating {
-  background-image: url(#{$img-path}icon-planning-active.svg);
+  background-image: url(#{$img-path}icon-pregnancy-dating.svg);
   background-size: 88px 80px;
 }
 
