Another fix [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -360,11 +360,10 @@ div.page-prenatal-activity {
             float: left;
           }
 
-
         }
 
-        &.term-preganancy,
-        &.preterm-preganancy,
+        &.term-pregnancy,
+        &.preterm-pregnancy,
         &.stillbirths-at-term,
         &.stillbirths-pre-term,
         &.abortions,
