--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -284,7 +284,12 @@ div.page-prenatal-activity {
 
         &.normal {
           font-weight: normal;
+          margin-bottom: 20px;
         }
+      }
+
+      .ui.form {
+        margin-bottom: 20px;
       }
 
       .form-input {
