--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -283,13 +283,21 @@ div.page-prenatal-activity {
         margin-bottom: 10px;
 
         &.normal {
-          font-weight: normal;
+          font-weight: bold;
           margin-bottom: 20px;
+        }
+
+        &.hepler {
+          margin-bottom: 40px;
         }
       }
 
       .ui.form {
         margin-bottom: 20px;
+
+        p {
+          font-weight: bold;
+        }
       }
 
       .form-input {
@@ -347,20 +355,20 @@ div.page-prenatal-activity {
 
           .label {
             width: 70%;
-            font-weight: normal;
+            font-weight: bold;
             float: left;
           }
 
           .yes {
             float: left;
-            font-size: 30px;
+            font-size: 25px;
             margin-left: 10px;
             margin-right: 30px;
           }
 
           .no {
             float: left;
-            font-size: 30px;
+            font-size: 25px;
             margin-left: 10px;
           }
 
@@ -381,7 +389,7 @@ div.page-prenatal-activity {
 
           .label {
             width: 70%;
-            font-weight: normal;
+            font-weight: bold;
             float: left;
           }
 
