Fix navigation when task and completed + buttons styling

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -503,6 +503,10 @@ div.page-prenatal-activity {
           width: 50%;
           float: left;
           margin: 0;
+
+          &.active {
+            border-left: 1px solid white;
+          }
         }
       }
     }
