--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -5,6 +5,7 @@ $color-secondary:  #0273B2;
 $color-text:       #808080;
 $color-background: #ccc;
 $color-dark-background: #808080;
+$color-light-background: #0393db;
 $color-dark-blue: #00374f;
 $color-gray:       #b1b1b1;
 $color-red:        #ff0000;
