Complete patient provisions [ci skip]

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -491,5 +491,9 @@ div.page-prenatal-activity {
           width: 100%;
         }
       }
+
+      .form.patient-provisions {
+        min-height: 335px;
+      }
     }
 }
