Increase bottom margin

--- a/client/src/assets/scss/_new.scss
+++ b/client/src/assets/scss/_new.scss
@@ -341,6 +341,9 @@ div.page-prenatal-activity {
             font-weight: bold;
           }
 
+          &.c-sections {
+            margin-bottom: 40px;
+          }
         }
 
         // Number inputs
